--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Code School</title>
+    <link rel="manifest" href="https://jacoborodicio.com/places-tracker/manifest.json">
+    <title>Places</title>
 </head>
 <body>
     <div id="root"></div>
